tests/ui/invalid_pymethod_receiver.stderr
error[E0277]: the trait bound `NotASelfType: From<&pyo3::Bound<'_, MyClass>>` is not satisfied
  --> tests/ui/invalid_pymethod_receiver.rs:12:44
   |
12 |     fn method_with_invalid_self_type(_slf: NotASelfType, _py: Python<'_>, _index: u32) {}
   |                                            ^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `From<&pyo3::Bound<'_, MyClass>>` is not implemented for `NotASelfType`
  --> tests/ui/invalid_pymethod_receiver.rs:8:1
   |
 8 | struct NotASelfType;
   | ^^^^^^^^^^^^^^^^^^^
   = note: required for `&pyo3::Bound<'_, MyClass>` to implement `Into<NotASelfType>`
   = note: required for `NotASelfType` to implement `TryFrom<&pyo3::Bound<'_, MyClass>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
